# neon-rtos2

./: Cargo.toml  build.rs  build.sh
.cargo/: config.toml
examples/: README.md
examples/cortex-m3/: .gitignore  Cargo.toml  README.md  memory.x
examples/cortex-m3/.cargo/: config.toml
examples/cortex-m3/src/: main.rs
examples/riscv-qemu/: .gitignore  Cargo.toml  README.md  build.rs  memory.x
examples/riscv-qemu/.cargo/: config.toml
examples/riscv-qemu/src/: main.rs
examples/tests/: Cargo.toml  README.md  build.rs
scripts/: run_cortex_m_qemu.sh  run_qemu_tests.sh  run_riscv_qemu.sh
src/: allocator.rs  arch.rs  compat.rs  config.rs  critical_section.rs  event.rs  ipc.rs  ipc_elegant.rs  lib.rs  log.rs  main.rs  mq.rs  mutex.rs  prelude.rs  schedule.rs  signal.rs  systick.rs  task.rs  timer.rs  utils.rs
src/arch/: cortex_m3.rs  test.rs
src/arch/cortex_m3/: cortex_m3.s
src/config/: mod.rs
src/drivers/: macros.rs  mod.rs  traits.rs
src/drivers/examples/: mock_gpio.rs  mock_spi.rs  mock_timer.rs  mock_uart.rs  mod.rs
src/error/: types.rs
src/hal/: mod.rs  test.rs  traits.rs
src/hal/cortex_m3/: mod.rs
src/hal/riscv/: mod.rs
src/hal/riscv/asm/: context.s
src/ipc/: channel.rs  mod.rs  queue.rs
src/kernel/: mod.rs  power.rs
src/kernel/scheduler/: mod.rs
src/kernel/task/: builder.rs  mod.rs  priority.rs  state.rs
src/kernel/time/: mod.rs  systick.rs  timer.rs
src/log/: mod.rs
src/mem/: allocator.rs
src/runtime/: channel.rs  executor.rs  future.rs  mod.rs  select.rs  waker.rs
src/sync/: condvar.rs  condvar_v2.rs  event.rs  guard.rs  mod.rs  mutex.rs  mutex_v2.rs  semaphore.rs  semaphore_v2.rs  signal.rs  signal_v2.rs
tests/: alloc_test.rs  task.rs  typed_task.rs
