[package]
name = "neon-rtos2"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "examples/cortex-m3",
    "examples/tests/"
]

[dependencies]
paste = "1.0"

[features]
default = ["cortex_m3"]
cortex_m3 = ["cortex-m", "cortex-m-rt", "embedded-alloc", "spin","cortex-m-semihosting","critical-section"]
riscv = ["riscv-rt", "embedded-alloc","critical-section"]

[dependencies.critical-section]
version = "1.2"
optional = true

[dev-dependencies]
critical-section = { version = "1.2", features = ["std"] }

[dependencies.cortex-m]
version = "0.7.7"
optional = true

[dependencies.cortex-m-rt]
version = "0.7.3"
optional = true


[dependencies.alloc-cortex-m]
version = "0.4.4"
optional = true

[dependencies.spin]
version = "0.9.8"
optional = true

[dependencies.cortex-m-semihosting]
version = "0.5.0"
optional = true

[dependencies.riscv-rt]
version = "0.12.2"
optional = true

[dependencies.embedded-alloc]
version = "0.5.1"
optional = true

[dependencies.rand]
version = "0.9.2"
optional = true


[build-dependencies]
cc = "1.0"


[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3

[profile.test]
opt-level = 0
debug = true
