[package]
name = "neon-rtos2-example-cortex-m3"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
neon-rtos2 = { path = "../.." ,features = ["cortex_m3"]}
cortex-m-semihosting = "0.5.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
