[package]
name = "riscv-qemu-example"
version = "0.1.0"
edition = "2021"
authors = ["Neon-RTOS2 Team"]
description = "RISC-V QEMU example for Neon-RTOS2"

[dependencies]
# Neon-RTOS2 with RISC-V support
neon-rtos2 = { path = "../..", features = ["riscv"] }

# RISC-V runtime - provides startup code, #[entry] macro, etc.
riscv-rt = "0.12"

# RISC-V low-level access (optional, for direct hardware access)
riscv = "0.11"

[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"
opt-level = "s"    # Optimize for size
lto = true         # Link-time optimization
debug = false
