[package]
name = "riscv-qemu-example"
version = "0.1.0"
edition = "2021"
authors = ["Neon-RTOS2 Team"]
description = "RISC-V QEMU example for Neon-RTOS2"

# 独立于主 workspace
[workspace]

[dependencies]
# Neon-RTOS2 with RISC-V support
neon-rtos2 = { path = "../..", features = ["riscv"] }

# RISC-V runtime - provides startup code, #[entry] macro, etc.
riscv-rt = { version = "0.12", features = ["single-hart"] }

# RISC-V low-level access (optional, for direct hardware access)
riscv = "0.11"

# Critical section implementation for RISC-V - 需要 restore-state-usize 来保存 mstatus
critical-section = { version = "1.2", features = ["restore-state-usize"] }

[build-dependencies]
# 用于复制 memory.x
# 无需额外依赖

[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"
opt-level = "s"    # Optimize for size
lto = true         # Link-time optimization
debug = false
